--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ retry-requests = "^2.0.0"
 pydantic-settings = "^2.3.4"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+requests-mock = "^1.12.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
